force-app/main/default/objects/Development_Task__c/Development_Task__c.object-meta.xml
<CustomObject>
    <label>Development Task</label>
    <nameField>
        <label>Development Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Development Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>