force-app/main/default/objects/Development_Task__c/fields/completion_date__c.field-meta.xml
<CustomField>
    <fullName>completion_date__c</fullName>
    <label>completion date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>