force-app/main/default/objects/Development_Task__c/fields/Estimated_Hour__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hour__c</fullName>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>