force-app/main/default/objects/Development_Task__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>