force-app/main/default/objects/Development_Task__c/fields/Request_date__c.field-meta.xml
<CustomField>
    <fullName>Request_date__c</fullName>
    <label>Request date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>